--- a/css/style.css
+++ b/css/style.css
@@ -94,8 +94,26 @@ main {
 }
 
 .container {
-    width: 70%;
+    width: 80%;
     margin: 0 auto;
-    background-color: red;
-    height: 1000px;
+    padding: 32px;;
+}
+
+.container h2 {
+    padding-top: 64px;
+    color: #3c4047;
+}
+
+.container p {
+    padding-top: 20px;
+    font-size: 14px;
+}
+
+/* fine main */
+
+/* footer */
+
+footer {
+    height: 45px;
+    background-color: #f5f5f5;
 }
