--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ header {
     margin-right: 40px;
     font-size: 15px;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .header-bottom li:last-child{
@@ -116,4 +117,25 @@ main {
 footer {
     height: 45px;
     background-color: #f5f5f5;
+}
+
+.footer-container {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+ul.footer-left {
+    display: flex;
+    padding: 0 32px 0 32px;
+    list-style: none;
+    font-size: 11px;
+    color: rgba(61,61,61,.8);
+}
+
+ul.footer-left li {
+    margin-right: 10px;
 }
